# sae_2025

./: README.md
cv_utils/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
cv_utils/barcode_detector/: barcode_detector.py  oak_bar.py
cv_utils/bucket_detector/: bucket_detector.py
cv_utils/landing_base_detector/: landing_base_detector.py
cv_utils/launch/: yolo_classifier.launch.py
cv_utils/qrcode_detector/: qrcode_detector.py
cv_utils/yolo_classifier/: yolo_classifier.py
drone_lib/: CMakeLists.txt  package.xml
drone_lib/include/drone/: Drone.hpp
drone_lib/src/: Drone.cpp  pos_to_rviz.cpp
fase1/: CMakeLists.txt  package.xml
fase1/include/fase1/: initial_takeoff_state.hpp  search_base_state.hpp
fase1/launch/: drone_viz.rviz  fase1.launch.py  params.yaml
fase1/src/: fase1.cpp
fase2/: CMakeLists.txt  package.xml
fase2/include/fase2/: PidController.hpp
fase2/launch/: fase2.launch.py  params.yaml
fase2/src/: fase2.cpp
fase3/: CMakeLists.txt  package.xml  params.yaml
fase3/include/fase3/: Detection.hpp  goto_base_state.hpp  precision_align_state.hpp  search_base_state.hpp
fase3/launch/: bases.txt  drone_viz.rviz  fase3.launch.py  params.yaml
fase3/src/: fase3.cpp  test_spiral.cpp  test_takeoff_landing.cpp
